# xComplex

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  googleTester.sh  main.cpp  tests.cpp  travisRun.sh
Adept/: adept_source.h
ad/: ad.h
adept/: adept.h
app/: main.cpp
gtests/: CMakeLists.txt
gtests/cmake/: internal_utils.cmake
gtests/googletest/cmake/: internal_utils.cmake
gtests/googletest/include/gtest/: gtest.h
gtests/src/: gtest_main.cc
include/: TestXComplex.h  acomplex.h  adatan2.h  adept_source.h  dcomplex.h  functions.hpp
source/: TestXComplex.cpp  acomplex.cpp  adatan.cpp  dcomplex.cpp  hello.cpp
src/: TestXComplex.cpp  acomplex.cpp  adatan.cpp  dcomplex.cpp  factorial.cpp  test.cpp  test.h
test/: AComplexDerivativeTest.cpp  FiveTest.cpp  GoogleMockTest.cpp  GoogleTestTest.cpp  SquareTest.cpp  testComplex.cpp
tests/: AComplexDerivativeTest.cpp  AComplexTest.cpp  CMakeLists.txt  DComplexTest.cpp  FactorialTest.cpp  FiveTest.cpp  MixedTest.cpp  testTest.cpp
xcomplex/: CMakeLists.txt
xcomplex/Coder/: acomplex.cpp  adatan.cpp  dcomplex.cpp
xcomplex/Include/: acomplex.h  adatan2.h  dcomplex.h
xcomplex/include/: acomplex.h  adatan2.h  dcomplex.h
xcomplex/src/: acomplex.cpp  dcomplex.cpp
