cmake_minimum_required(VERSION 3.3)
project(xComplex)
IF(WIN32)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  /EHsc -DUSE_${ADJOINTLIB} -D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING")
ELSEIF(UNIX)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_${ADJOINTLIB} -std=gnu++11")
ENDIF()
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_CXX_STANDARD 11)
set(APPVEYOR_BUILD1 "$ENV{APPVEYOR_BUILD_FOLDER}")
IF(APPVEYOR_BUILD1)
  message("Definition Added")
  add_definitions(-DAPPVEYOR_BUILD_OK)
ENDIF()
add_subdirectory(gtests)
find_package(Threads REQUIRED)
enable_testing()
add_subdirectory(xcomplex)
add_subdirectory(tests)
