project(xcomplex_tests)
include_directories(${GTEST_SOURCE_DIR} "../adept" "../xcomplex/include")
file(GLOB xcomplex_TEST_SRC "../tests/*.cpp")
add_executable(test_xcomplex ${xcomplex_TEST_SRC})
set(APPVEYOR_BUILD1 "$ENV{APPVEYOR_BUILD_FOLDER}")
IF(APPVEYOR_BUILD1)
  target_link_libraries(test_xcomplex LINK_PUBLIC gtest xcomplex)
  add_definitions(-DAPPVEYOR_BUILD1)
ELSE()
  target_link_libraries(test_xcomplex LINK_PUBLIC gtest_main xcomplex)
ENDIF()
